fix nav on safari

--- a/lineman/app/components/navbar/navbar.scss
+++ b/lineman/app/components/navbar/navbar.scss
@@ -11,24 +11,31 @@
 
 .lmo-navbar-flexbox{
   display: flex;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
   flex-wrap: nowrap;
   width: 100%;
   /*flex-direction: */
-  /*flex-wrap	 ?*/
-  justify-content: space-between;
-  /*align-items	 ?*/
+  /*flex-wrap ?*/
+  justify-content: center;
+  -webkit-justify-content: center;
+  /*align-items ?*/
   /*align-content*/
 }
 
 .lmo-navbar-logo {
   @media (min-width: 940px){ width: 120px; }
   padding: 0 5px;
+  .lmo-navbar-btn {
+    float: right;
+  }
 }
 
 .lmo-navbar-logo-image {
   width: 40px;
   height: 40px;
-  float: left;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url(/img/lbow_round_34.png);
@@ -37,11 +44,13 @@
 .lmo-navbar-search {
   max-width: $main-max-width;
   flex-grow: 2;
+  -webkit-flex-grow: 2;
   padding-left: 5px;
 }
 
 .lmo-navbar-buttons {
   width: 128px;
+
 }
 
 .lmo-navbar-item{
@@ -65,7 +74,6 @@
   font-size: 19px;
 }
 
-
 .lmo-navbar-dropdown{
   top: 44px;
   padding: 0;
@@ -76,34 +84,6 @@
     width: 320px;
   }
 }
-
-/*#inbox-dropdown{ left: 49px; }*/
-
-/*#search-dropdown{*/
-  /*left: 48px;*/
-  /*@media (max-width: $screen-xs-max){*/
-    /*left: 96px;*/
-  /*}*/
-/*}*/
-
-/*#notifications-dropdown{ right: 47px; }*/
-/*@media (max-width: 380px){*/
-  /*#inbox-dropdown, #search-dropdown{ left: 0; }*/
-  /*#notifications-dropdown, #user-options-dropdown{right: 10px;}*/
-/*}*/
-
-/*.fa-xlg{ font-size: 26px; }*/
-/*#user-options-dropdown a{*/
-  /*color: $kinda-dark-grey;*/
-/*}*/
-
-/*#user-options-dropdown .media-left{*/
-  /*width: 40px;*/
-  /*vertical-align: middle;*/
-  /*text-align: center;*/
-/*}*/
-/*#user-options-dropdown .media-body{ vertical-align: middle; }*/
-
 
 .lmo-navbar-btn.has-badge{
   position: relative;
